--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,7 @@ android.useAndroidX=true
 android.enableJetifier=true
 faceAppName=Face SDK Examples
 cardAppName=Card SDK Examples
+eKycAppName=eKYC SDK Examples
 versionName=1.0
 versionCode=1
 
