--- a/app-card/build.gradle
+++ b/app-card/build.gradle
@@ -22,33 +22,31 @@ android {
 }
 
 dependencies {
-    // [required] Element libs
+    // Element libs
     implementation "com.element:face-cam:$globalElementSdkVersion"
     implementation "com.element:face-core:$globalElementSdkVersion"
     implementation "com.element:face-ui:$globalElementSdkVersion"
+    implementation "com.element:card:$globalElementSdkVersion"
 
     // [required] dependencies
-    implementation "androidx.work:work-runtime:2.3.4"
-    implementation "com.google.android.material:material:1.1.0"
+    implementation "androidx.work:work-runtime:2.6.0"
+    implementation "com.google.android.material:material:1.4.0"
     implementation "com.amazonaws:aws-android-sdk-core:2.8.5"
     implementation "com.amazonaws:aws-android-sdk-s3:2.8.5"
-    implementation "com.google.android.gms:play-services-location:17.0.0"
+    implementation "com.google.android.gms:play-services-location:18.0.0"
     implementation "com.google.guava:guava:27.0.1-android"
-    implementation "androidx.core:core-ktx:1.3.0"
+    implementation "androidx.core:core-ktx:1.6.0"
     implementation "com.airbnb.android:lottie:3.0.7"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2"
 
     // [required] for device enrollment
     implementation "com.element:face-support:$globalElementSdkVersion"
-
-    // [required] for card
-    implementation "com.element:card:$globalElementSdkVersion"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$globalKotlinVersion"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$globalKotlinVersion"
 
     // [optional] for the legacy 32-bit support
     implementation "com.element:face-32bit:$globalElementSdkVersion"
 
     // [optional] for this demo app
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$globalKotlinVersion"
-    implementation "androidx.constraintlayout:constraintlayout:1.1.3"
+    implementation "androidx.constraintlayout:constraintlayout:2.1.3"
 }
