--- a/app-face/build.gradle
+++ b/app-face/build.gradle
@@ -24,7 +24,7 @@ android {
         release {
             keyAlias "key"
             keyPassword "password"
-            storeFile file("[PLACEHOLDER]")
+            storeFile file("PLACEHOLDER")
             storePassword "password"
         }
     }
@@ -42,31 +42,31 @@ android {
 }
 
 dependencies {
-    // [required] Element libs
+    // Element libs
     implementation "com.element:face-cam:$globalElementSdkVersion"
     implementation "com.element:face-core:$globalElementSdkVersion"
 
     // [required] dependencies
-    implementation "androidx.work:work-runtime:2.3.4"
-    implementation "com.google.android.material:material:1.1.0"
+    implementation "androidx.work:work-runtime:2.6.0"
+    implementation "com.google.android.material:material:1.4.0"
     implementation "com.amazonaws:aws-android-sdk-core:2.8.5"
     implementation "com.amazonaws:aws-android-sdk-s3:2.8.5"
-    implementation "com.google.android.gms:play-services-location:17.0.0"
+    implementation "com.google.android.gms:play-services-location:18.0.0"
     implementation "com.google.guava:guava:27.0.1-android"
-
-    // [required] for device enrollment
-    implementation "com.element:face-support:$globalElementSdkVersion"
 
     // [optional] for enhanced UI and animations
     implementation "com.element:face-ui:$globalElementSdkVersion"
-    implementation "androidx.core:core-ktx:1.3.0"
+    implementation "androidx.core:core-ktx:1.6.0"
     implementation "com.airbnb.android:lottie:3.0.7"
+
+    // [optional] for device enrollment
+    implementation "com.element:face-support:$globalElementSdkVersion"
 
     // [optional] for the legacy 32-bit support
     implementation "com.element:face-32bit:$globalElementSdkVersion"
 
     // [optional] for this demo app
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$globalKotlinVersion"
-    implementation "androidx.constraintlayout:constraintlayout:2.0.4"
+    implementation "androidx.constraintlayout:constraintlayout:2.1.3"
     implementation "androidx.preference:preference-ktx:1.1.1"
 }
