--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,8 @@ buildscript {
         globalTargetSdkVersion = "30"
         globalBuildToolsVersion = "30.0.2"
         globalGradleVersion = "4.2.1"
-        globalKotlinVersion = "1.4.0"
-        globalElementSdkVersion = "1.6.1.30429"
+        globalKotlinVersion = "1.5.30"
+        globalElementSdkVersion = "[PLACEHOLDER]"
 
         def localProperties = new Properties()
         localProperties.load(new FileInputStream(rootProject.file("local.properties")))
@@ -19,7 +19,7 @@ buildscript {
     }
 
     repositories {
-        jcenter()
+        mavenCentral()
         google()
     }
 
@@ -32,7 +32,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
         maven {
             url "s3://maven.android.discoverelement.com/releases"
             credentials(AwsCredentials) {
